--- a/app/src/main/res/xml/pref_main.xml
+++ b/app/src/main/res/xml/pref_main.xml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <CheckBoxPreference
-        android:title="Show Bass"
-        android:key="show_bass"
-        android:defaultValue="true"
-        android:summaryOn="Shown"
-        android:summaryOff="Hidden"
-        />
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ListPreference
         android:title="@string/pref_sort_label"
