--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,115 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context="app.com.vladimirjeune.popmovies.DetailActivity"
+    android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="app.com.vladimirjeune.popmovies.DetailActivity">
-
-    <View
-        android:id="@+id/titleBackground"
-        android:layout_width="0dp"
-        android:layout_height="80dp"
-        android:background="@color/colorPrimaryDark"
-        android:padding="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginEnd="0dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    >
+    <android.support.constraint.ConstraintLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="All the Money in the World"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintRight_toRightOf="@+id/titleBackground"
-        app:layout_constraintTop_toTopOf="@+id/titleBackground"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/titleBackground"
-        />
+        >
 
-    <ImageView
-        android:id="@+id/onesheet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:src="@drawable/tmd_placeholder_poster"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        />
+        <View
+            android:id="@+id/textViewTitleBackground"
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:background="@color/colorPrimaryDark"
+            android:padding="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginEnd="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
 
-    <TextView
-        android:id="@+id/rating"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="7.2"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"
-        app:layout_constraintLeft_toRightOf="@+id/onesheet"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        app:layout_constraintTop_toTopOf="@+id/onesheet"
-        android:layout_marginTop="0dp" />
+        <TextView
+            android:id="@+id/textViewTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="All the Money in the World"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textColor="@android:color/background_light"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintRight_toRightOf="@+id/textViewTitleBackground"
+            app:layout_constraintTop_toTopOf="@+id/textViewTitleBackground"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/textViewTitleBackground"
+            />
 
-    <TextView
-        android:id="@+id/out_of_ten"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="/10"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
-        app:layout_constraintLeft_toRightOf="@+id/rating"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintTop_toTopOf="@+id/rating"
-        android:layout_marginTop="0dp" />
+        <ImageView
+            android:id="@+id/imageViewOnesheet"
+            android:contentDescription="@string/tools_poster_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:src="@drawable/tmd_placeholder_poster"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
+            />
 
-    <TextView
-        android:id="@+id/runtime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="141 min"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
-        android:layout_marginStart="0dp"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/rating"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/rating" />
+        <TextView
+            android:id="@+id/textViewRating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="7.2"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"
+            app:layout_constraintLeft_toRightOf="@+id/imageViewOnesheet"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            app:layout_constraintTop_toTopOf="@+id/imageViewOnesheet"
+            android:layout_marginTop="0dp" />
 
-    <TextView
-        android:id="@+id/release"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="2017"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:layout_marginLeft="0dp"
-        android:layout_marginStart="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/runtime"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/runtime" />
+        <TextView
+            android:id="@+id/textViewOutOfTen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="/10"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
+            app:layout_constraintLeft_toRightOf="@+id/textViewRating"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintTop_toTopOf="@+id/textViewRating"
+            android:layout_marginTop="0dp" />
 
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/onesheet"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/onesheet" />
+        <TextView
+            android:id="@+id/textViewRuntime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="141 min"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/textViewRating"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/textViewRating" />
 
+        <TextView
+            android:id="@+id/textViewRelease"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="2017"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/textViewRuntime"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/textViewRuntime" />
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/textViewSynopsis"
+            tools:text="@string/tools_lorem_paragraph"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageViewOnesheet"
+            app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet" />
+
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
