--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -35,18 +35,20 @@
             android:id="@+id/textViewTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="All the Money in the World"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:textAllCaps="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@android:color/background_light"
-            android:layout_marginRight="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textViewTitleBackground"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="@+id/textViewTitleBackground"
             app:layout_constraintTop_toTopOf="@+id/textViewTitleBackground"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/textViewTitleBackground"
-            />
+            tools:text="All the Money in the World" />
 
         <ImageView
             android:id="@+id/imageViewOnesheet"
@@ -58,8 +60,19 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
+            app:layout_constraintTop_toBottomOf="@+id/textViewTitleBackground"
             />
+
+        <TextView
+            android:id="@+id/textViewRatingTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Rating"
+            app:layout_constraintTop_toTopOf="@id/imageViewOnesheet"
+            app:layout_constraintLeft_toRightOf="@id/imageViewOnesheet"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="0dp" />
 
         <TextView
             android:id="@+id/textViewRating"
@@ -67,11 +80,11 @@
             android:layout_height="wrap_content"
             tools:text="7.2"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"
-            app:layout_constraintLeft_toRightOf="@+id/imageViewOnesheet"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
-            app:layout_constraintTop_toTopOf="@+id/imageViewOnesheet"
-            android:layout_marginTop="0dp" />
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/textViewRatingTitle"
+            app:layout_constraintTop_toBottomOf="@+id/textViewRatingTitle"
+            android:layout_marginTop="-1dp" />
 
         <TextView
             android:id="@+id/textViewOutOfTen"
@@ -85,6 +98,19 @@
             app:layout_constraintTop_toTopOf="@+id/textViewRating"
             android:layout_marginTop="0dp" />
 
+
+        <TextView
+            android:id="@+id/textViewRuntimeTitle"
+            tools:text="Runtime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/textViewRating"
+            app:layout_constraintLeft_toLeftOf="@id/textViewRating"
+            />
+
         <TextView
             android:id="@+id/textViewRuntime"
             android:layout_width="wrap_content"
@@ -93,9 +119,21 @@
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="0dp"
-            app:layout_constraintLeft_toLeftOf="@+id/textViewRating"
+            android:layout_marginTop="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/textViewRuntimeTitle"
+            app:layout_constraintTop_toBottomOf="@+id/textViewRuntimeTitle" />
+
+        <TextView
+            android:id="@+id/textViewReleaseTitle"
+            tools:text="Release"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/textViewRating" />
+            app:layout_constraintLeft_toLeftOf="@id/textViewRuntime"
+            app:layout_constraintTop_toBottomOf="@id/textViewRuntime"
+            />
 
         <TextView
             android:id="@+id/textViewRelease"
@@ -105,9 +143,21 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:layout_marginLeft="0dp"
             android:layout_marginStart="0dp"
-            app:layout_constraintLeft_toLeftOf="@+id/textViewRuntime"
+            android:layout_marginTop="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/textViewReleaseTitle"
+            app:layout_constraintTop_toBottomOf="@+id/textViewReleaseTitle" />
+
+        <TextView
+            android:id="@+id/textViewSynopsisTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/textViewRuntime" />
+            android:textAllCaps="false"
+            app:layout_constraintLeft_toLeftOf="@id/imageViewOnesheet"
+            app:layout_constraintTop_toBottomOf="@id/imageViewOnesheet"
+            tools:text="Synopsis" />
 
         <TextView
             android:id="@+id/textViewSynopsis"
@@ -115,14 +165,16 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="0dp"
             android:layout_marginRight="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="0dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewOnesheet"
-            app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewSynopsisTitle"
+            app:layout_constraintLeft_toLeftOf="@+id/textViewSynopsisTitle"
+            />
+
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
