--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -41,6 +41,10 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:paddingLeft="8dp"
+            android:paddingStart="8dp"
+            android:paddingRight="8dp"
+            android:paddingEnd="8dp"
             android:textAllCaps="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@android:color/background_light"
@@ -67,7 +71,7 @@
             android:id="@+id/textViewRatingTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Rating"
+            android:text="@string/detail_rating"
             app:layout_constraintTop_toTopOf="@id/imageViewOnesheet"
             app:layout_constraintLeft_toRightOf="@id/imageViewOnesheet"
             android:layout_marginLeft="24dp"
@@ -90,18 +94,20 @@
             android:id="@+id/textViewOutOfTen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="/10"
+            android:text="@string/detail_out_of_10"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
-            app:layout_constraintLeft_toRightOf="@+id/textViewRating"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="0dp"
+            android:layout_marginTop="0dp"
+            android:paddingTop="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/textViewRating"
             app:layout_constraintTop_toTopOf="@+id/textViewRating"
-            android:layout_marginTop="0dp" />
+            />
 
 
         <TextView
             android:id="@+id/textViewRuntimeTitle"
-            tools:text="Runtime"
+            android:text="@string/detail_runtime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
@@ -125,7 +131,7 @@
 
         <TextView
             android:id="@+id/textViewReleaseTitle"
-            tools:text="Release"
+            android:text="@string/detail_release"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
@@ -157,7 +163,7 @@
             android:textAllCaps="false"
             app:layout_constraintLeft_toLeftOf="@id/imageViewOnesheet"
             app:layout_constraintTop_toBottomOf="@id/imageViewOnesheet"
-            tools:text="Synopsis" />
+            android:text="@string/detail_synopsis" />
 
         <TextView
             android:id="@+id/textViewSynopsis"
@@ -166,10 +172,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginEnd="0dp"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="0dp"
+            android:paddingLeft="8dp"
+            android:paddingStart="8dp"
+            android:paddingRight="8dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="8dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewSynopsisTitle"
             app:layout_constraintLeft_toLeftOf="@+id/textViewSynopsisTitle"
