feat: Add About page to project, make sure can get back easily
Have about work on Main page and Details

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -45,7 +45,8 @@
             android:paddingStart="8dp"
             android:paddingRight="8dp"
             android:paddingEnd="8dp"
-            android:textAllCaps="false"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@android:color/background_light"
             app:layout_constraintBottom_toBottomOf="@+id/textViewTitleBackground"
