--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -170,15 +170,15 @@
             android:id="@+id/textViewSynopsis"
             tools:text="@string/tools_lorem_paragraph"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginEnd="0dp"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="0dp"
-            android:paddingLeft="8dp"
-            android:paddingStart="8dp"
+            android:paddingLeft="0dp"
+            android:paddingStart="0dp"
             android:paddingRight="8dp"
             android:paddingEnd="8dp"
             android:paddingBottom="8dp"
