feat: Add text to posters on MainActivity so navigable w/o posters
Sometime when internet cut off there is enough info to still navigate, but you
do not know where you are going without the posters that only populate when
there is internet access.  So, you put the Titles in.  It also may be more
readable than the posters themselves.

--- a/app/src/main/res/layout/movies_grid_item.xml
+++ b/app/src/main/res/layout/movies_grid_item.xml
@@ -24,6 +24,7 @@
         />
 
     <TextView
+        android:id="@+id/tv_movie_title_item"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
