--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,15 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frame_layout_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
     tools:context="app.com.vladimirjeune.popmovies.MainActivity">
 
-    <android.support.v7.widget.RecyclerView
+    <app.com.vladimirjeune.popmovies.FillRecyclerView
         android:id="@+id/rv_grid_movies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="@dimen/item_margin"
+        android:columnWidth="@dimen/column_width"
         android:clipToPadding="false"
         />
 
