fix: Try to find a better place to manually reset the position of RecyclerView
You are trying to make it so you can keep your place on rotation, but reset to
top when changing type of list the user wants to see.  Working on it.  Also
trying to fix header colors.  Trying on that as well.

--- a/app/src/main/res/layout/main_page_header.xml
+++ b/app/src/main/res/layout/main_page_header.xml
@@ -6,11 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp"
-    android:text="@string/pref_sort_popular_label"
     tools:text="@string/pref_sort_popular_label"
     android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
     android:textColor="@color/text_header_orange"
     android:textStyle="bold|italic"
-    android:background="@color/header_popular_background"
+    tools:background="@color/header_popular_background"
     />
 
