--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,12 +25,12 @@
     <color name="white_translucent">#77FFFFFF</color>
 
     <!-- orange -->
-    <color name="orange_dark_translucent">#77200c00</color>
+    <color name="orange_dark_translucent">#99200c00</color>
     <color name="orange_dark">#271300</color>
     <color name="orange_bright">#fd9229</color>
 
     <!-- blue -->
-    <color name="blue_dark_translucent">#77000c20</color>
+    <color name="blue_dark_translucent">#aa001334</color>  <!-- #7700c20 -->
     <color name="blue_dark">#00031a</color>
     <color name="blue_bright">#0b24fb</color>
 
