--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,12 @@
         android:clipToPadding="false"
         />
 
+    <ProgressBar
+        android:id="@+id/pb_grid_movies"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        />
+
 </FrameLayout>
