--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="app.com.vladimirjeune.popmovies.DetailActivity"
     android:id="@+id/scrollView"
+    android:background="@android:color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -13,6 +14,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         >
 
         <View
@@ -21,11 +23,6 @@
             android:layout_height="80dp"
             android:background="@color/colorPrimaryDark"
             android:padding="0dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginEnd="0dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -48,7 +45,7 @@
             android:maxLines="2"
             android:ellipsize="end"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:textColor="@android:color/background_light"
+            android:textColor="@color/white_translucent_more_solid"
             app:layout_constraintBottom_toBottomOf="@+id/textViewTitleBackground"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="@+id/textViewTitleBackground"
@@ -72,34 +69,31 @@
             android:id="@+id/textViewRatingTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/detail_rating"
-            app:layout_constraintTop_toTopOf="@id/imageViewOnesheet"
-            app:layout_constraintLeft_toRightOf="@id/imageViewOnesheet"
             android:layout_marginLeft="24dp"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="0dp" />
+            android:text="@string/detail_rating"
+            android:textColor="@color/logo_orange"
+            android:textStyle="bold|italic"
+            app:layout_constraintLeft_toRightOf="@+id/imageViewOnesheet"
+            app:layout_constraintTop_toTopOf="@+id/imageViewOnesheet" />
 
         <TextView
             android:id="@+id/textViewRating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="7.2"
+            android:textColor="@color/white_translucent_more_solid"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"
-            android:layout_marginStart="0dp"
-            android:layout_marginLeft="0dp"
             app:layout_constraintLeft_toLeftOf="@+id/textViewRatingTitle"
-            app:layout_constraintTop_toBottomOf="@+id/textViewRatingTitle"
-            android:layout_marginTop="-1dp" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewRatingTitle" />
 
         <TextView
             android:id="@+id/textViewOutOfTen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/detail_out_of_10"
+            android:textColor="@color/white_translucent_more_solid"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
-            android:layout_marginStart="0dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="0dp"
             android:paddingTop="8dp"
             app:layout_constraintLeft_toRightOf="@+id/textViewRating"
             app:layout_constraintTop_toTopOf="@+id/textViewRating"
@@ -108,49 +102,43 @@
 
         <TextView
             android:id="@+id/textViewRuntimeTitle"
-            android:text="@string/detail_runtime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
-            android:layout_marginLeft="0dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/textViewRating"
-            app:layout_constraintLeft_toLeftOf="@id/textViewRating"
-            />
+            android:text="@string/detail_runtime"
+            android:textColor="@color/logo_orange"
+            android:textStyle="bold|italic"
+            app:layout_constraintLeft_toLeftOf="@+id/textViewRating"
+            app:layout_constraintTop_toBottomOf="@+id/textViewRating" />
 
         <TextView
             android:id="@+id/textViewRuntime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="141 min"
+            android:textColor="@color/white_translucent_more_solid"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
-            android:layout_marginStart="0dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="0dp"
             app:layout_constraintLeft_toLeftOf="@+id/textViewRuntimeTitle"
             app:layout_constraintTop_toBottomOf="@+id/textViewRuntimeTitle" />
 
         <TextView
             android:id="@+id/textViewReleaseTitle"
-            android:text="@string/detail_release"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginStart="0dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintLeft_toLeftOf="@id/textViewRuntime"
-            app:layout_constraintTop_toBottomOf="@id/textViewRuntime"
-            />
+            android:text="@string/detail_release"
+            android:textColor="@color/logo_orange"
+            android:textStyle="bold|italic"
+            app:layout_constraintLeft_toLeftOf="@+id/textViewRuntime"
+            app:layout_constraintTop_toBottomOf="@+id/textViewRuntime" />
 
         <TextView
             android:id="@+id/textViewRelease"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="2017"
+            android:textColor="@color/white_translucent_more_solid"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:layout_marginLeft="0dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
             app:layout_constraintLeft_toLeftOf="@+id/textViewReleaseTitle"
             app:layout_constraintTop_toBottomOf="@+id/textViewReleaseTitle" />
 
@@ -158,25 +146,21 @@
             android:id="@+id/textViewSynopsisTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginStart="0dp"
             android:layout_marginTop="16dp"
+            android:text="@string/detail_synopsis"
             android:textAllCaps="false"
-            app:layout_constraintLeft_toLeftOf="@id/imageViewOnesheet"
-            app:layout_constraintTop_toBottomOf="@id/imageViewOnesheet"
-            android:text="@string/detail_synopsis" />
+            android:textColor="@color/logo_orange"
+            android:textStyle="bold|italic"
+            app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
+            app:layout_constraintTop_toBottomOf="@+id/imageViewOnesheet" />
 
         <TextView
             android:id="@+id/textViewSynopsis"
             tools:text="@string/tools_lorem_paragraph"
+            android:textColor="@color/white_translucent_more_solid"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginLeft="0dp"
             android:paddingLeft="0dp"
             android:paddingStart="0dp"
             android:paddingRight="8dp"
