--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/grey_dark</color>
+    <color name="colorPrimaryDark">@android:color/black</color>
+    <color name="colorAccent">@color/logo_orange</color>
 
     <color name="logo_orange">@color/orange_bright</color>
     <color name="logo_blue">@color/blue_bright</color>
@@ -23,6 +23,7 @@
 
     <!--whites -->
     <color name="white_translucent">#77FFFFFF</color>
+    <color name="white_translucent_more_solid">#CCFFFFFF</color>
 
     <!-- orange -->
     <color name="orange_dark_translucent">#99200c00</color>
