feat: Create Snackbar that allows User into Settings and fix connectivity problem
Use Settings instead of something more specific because the specific connectivity
Activities only go to either Airplane Mode, OR Wifi enabling.  There is no way
to give the user access to both.  Snackbar will take place of Toast that appears
when the user tries to load the Main page without internet connectivity.

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
     tools:context="app.com.vladimirjeune.popmovies.AboutActivity">
 
     <ImageView
@@ -15,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        />
+        android:contentDescription="@string/about_tmdb_logo" />
 
     <ImageView
         android:id="@+id/imageViewTMDbLogo"
@@ -32,7 +33,7 @@
 
     <TextView
         android:id="@+id/textViewLegal"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
@@ -41,6 +42,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/about_tmdb_legal"
         android:textStyle="italic"
+        android:textColor="@color/white_translucent_more_solid"
         app:layout_constraintLeft_toRightOf="@+id/imageViewTMDbLogo"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageViewTMDbLogo" />
