--- a/app/src/main/res/layout/movies_grid_item.xml
+++ b/app/src/main/res/layout/movies_grid_item.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout_grid"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/black">
+    android:background="@android:color/black"
+    >
 
     <ImageView
         android:id="@+id/iv_movie_poster_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:src="@drawable/tmd_error_poster"
+        android:foreground="?attr/selectableItemBackground"
         />
 
     <View
