--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -46,6 +46,7 @@
             android:ellipsize="end"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@color/white_translucent_more_solid"
+            android:letterSpacing="0.05"
             app:layout_constraintBottom_toBottomOf="@+id/textViewTitleBackground"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="@+id/textViewTitleBackground"
@@ -74,6 +75,7 @@
             android:text="@string/detail_rating"
             android:textColor="@color/logo_orange"
             android:textStyle="bold|italic"
+            android:letterSpacing="0.1"
             app:layout_constraintLeft_toRightOf="@+id/imageViewOnesheet"
             app:layout_constraintTop_toTopOf="@+id/imageViewOnesheet" />
 
@@ -108,6 +110,7 @@
             android:text="@string/detail_runtime"
             android:textColor="@color/logo_orange"
             android:textStyle="bold|italic"
+            android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/textViewRating"
             app:layout_constraintTop_toBottomOf="@+id/textViewRating" />
 
@@ -129,6 +132,7 @@
             android:text="@string/detail_release"
             android:textColor="@color/logo_orange"
             android:textStyle="bold|italic"
+            android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/textViewRuntime"
             app:layout_constraintTop_toBottomOf="@+id/textViewRuntime" />
 
@@ -151,6 +155,7 @@
             android:textAllCaps="false"
             android:textColor="@color/logo_orange"
             android:textStyle="bold|italic"
+            android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
             app:layout_constraintTop_toBottomOf="@+id/imageViewOnesheet" />
 
