fix: Clean up and follow-up on some Lint warnings

--- a/app/src/main/res/layout-v21/activity_detail.xml
+++ b/app/src/main/res/layout-v21/activity_detail.xml
@@ -46,6 +46,7 @@
             android:ellipsize="end"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@color/white_translucent_more_solid"
+            android:letterSpacing="0.05"
             app:layout_constraintBottom_toBottomOf="@+id/textViewTitleBackground"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="@+id/textViewTitleBackground"
@@ -81,6 +82,7 @@
             android:textColor="@color/logo_orange"
             android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
+            android:letterSpacing="0.1"
             app:layout_constraintLeft_toRightOf="@+id/imageViewOnesheet"
             app:layout_constraintTop_toTopOf="@+id/imageViewOnesheet"
             app:layout_constraintRight_toRightOf="@+id/textViewOutOfTen"
@@ -124,6 +126,7 @@
             android:textColor="@color/logo_orange"
             android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
+            android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/textViewRating"
             app:layout_constraintTop_toBottomOf="@+id/textViewRating"
             app:layout_constraintRight_toRightOf="@+id/textViewRuntime"
@@ -154,6 +157,7 @@
             android:textColor="@color/logo_orange"
             android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
+            android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/textViewRuntime"
             app:layout_constraintTop_toBottomOf="@+id/textViewRuntime"
             app:layout_constraintRight_toRightOf="@+id/textViewRelease"
@@ -187,6 +191,7 @@
             android:textColor="@color/logo_orange"
             android:textStyle="bold|italic"
             android:background="@color/header_popular_background"
+            android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
             app:layout_constraintTop_toBottomOf="@+id/imageViewOnesheet"
             app:layout_constraintRight_toRightOf="@+id/textViewSynopsis"
