--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -180,6 +180,8 @@
             android:paddingLeft="2dp"
             android:paddingRight="8dp"
             android:paddingEnd="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:maxLines="1"
             android:ellipsize="end"
             android:text="@string/detail_synopsis"
@@ -203,6 +205,8 @@
             android:paddingStart="0dp"
             android:paddingRight="8dp"
             android:paddingEnd="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:paddingBottom="8dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewSynopsisTitle"
