fix: Warnings in XML and some visual oddities
Made UI better for RTL, and fixed the Ratings in w592 mode.

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -75,6 +75,8 @@
             android:paddingBottom="2dp"
             android:paddingStart="2dp"
             android:paddingLeft="2dp"
+            android:paddingEnd="2dp"
+            android:paddingRight="2dp"
             android:maxLines="1"
             android:ellipsize="end"
             android:text="@string/detail_rating"
@@ -118,6 +120,8 @@
             android:paddingBottom="2dp"
             android:paddingStart="2dp"
             android:paddingLeft="2dp"
+            android:paddingEnd="2dp"
+            android:paddingRight="2dp"
             android:maxLines="1"
             android:ellipsize="end"
             android:text="@string/detail_runtime"
@@ -148,6 +152,8 @@
             android:paddingBottom="2dp"
             android:paddingStart="2dp"
             android:paddingLeft="2dp"
+            android:paddingEnd="2dp"
+            android:paddingRight="2dp"
             android:maxLines="1"
             android:ellipsize="end"
             android:text="@string/detail_release"
