--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -11,12 +11,49 @@
         android:id="@+id/imageViewDivider"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        app:srcCompat="@android:color/holo_orange_dark"
+        app:srcCompat="@color/divider_marquee_1"
         android:padding="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/imageViewDivider_2"
         tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/imageViewDivider_2"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        app:srcCompat= "@color/divider_marquee_2"
+        tools:ignore="ContentDescription"
+        android:padding="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/imageViewDivider"
+        app:layout_constraintRight_toLeftOf="@+id/imageViewDivider_3"
+        />
+
+    <ImageView
+        android:id="@+id/imageViewDivider_3"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        app:srcCompat="@color/divider_marquee_3"
+        tools:ignore="ContentDescription"
+        android:padding="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/imageViewDivider_2"
+        app:layout_constraintRight_toLeftOf="@+id/imageViewDivider_4"
+        />
+
+    <ImageView
+        android:id="@+id/imageViewDivider_4"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        app:srcCompat="@color/divider_marquee_4"
+        tools:ignore="ContentDescription"
+        android:padding="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/imageViewDivider_3"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
 
     <ImageView
         android:id="@+id/imageViewTMDbLogo"
