feat: Create Toast that changes color with the current type

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,9 +11,12 @@
     <color name="header_popular_background">@color/orange_dark_translucent</color>
     <color name="header_top_rated_background">@color/blue_dark_translucent</color>
     <color name="header_favorite_background">@color/purple_dark_translucent</color>
-    <color name="text_header_blue">@color/blue_bright</color>
     <color name="text_header_orange">@color/orange_bright</color>
+    <color name="text_header_blue">@color/blue_bright</color>
     <color name="text_header_purple">@color/purple_bright</color>
+    <color name="toast_background_orange">@color/orange_translucent</color>
+    <color name="toast_background_blue">@color/blue_translucent</color>
+    <color name="toast_background_purple">@color/purple_translucent</color>
 
     <!-- About Marquee -->
     <color name="divider_marquee_1">@color/orange_bright</color>
@@ -36,11 +39,13 @@
 
     <!-- orange -->
     <color name="orange_dark_translucent">#99200c00</color>
+    <color name="orange_translucent">#aa682700</color>
     <color name="orange_bright">#fd9229</color>
     <color name="orange_found">#FFFD5A28</color>
 
     <!-- blue -->
     <color name="blue_dark_translucent">#aa001334</color>  <!-- #7700c20 -->
+    <color name="blue_translucent">#cc002566</color>  <!-- #7700c20 -->
     <color name="blue_bright">#0b24fb</color>
     <color name="blue_found">#FF3028FD</color>
 
@@ -48,6 +53,7 @@
     <color name="purple_found">#FF8828FD</color>
     <color name="purple_bright">#FF9A28FD</color>
     <color name="purple_dark_translucent">#aa110127</color>
+    <color name="purple_translucent">#cc2a0066</color>
 
 
 </resources>
